--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install modules
         run: npm install
       - name: Jest Unit Tests
-        run: npm run test
+        run: npm run test:unit
