update file types

--- a/.github/workflows/prod.workflow.yml
+++ b/.github/workflows/prod.workflow.yml
@@ -2,11 +2,13 @@ name: CD
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - '**.css'
       - '**.html'
       - '**.png'
+      - '**.vue'
+      - '**.js'
 
 jobs:
   build:
