build and deploy steps

--- a/.github/workflows/prod.workflow.yml
+++ b/.github/workflows/prod.workflow.yml
@@ -11,21 +11,18 @@ on:
       - '**.js'
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
         run: npm install
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+      - name: Build
+        run: npm run-script build
       - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Upload files to storage account
         uses: azure/CLI@v1
         with:
