--- a/.github/workflows/prod.workflow.yml
+++ b/.github/workflows/prod.workflow.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Install modules
         run: npm install
       - name: Build
-        run: npm run-script build
+        run: npm run build
+      - name: Generate static files
+        run: npm run generate
       - name: Azure Login
         uses: azure/login@v1
         with:
